Gender Ui design

--- a/app/src/main/res/layout/item_sprite_feature.xml
+++ b/app/src/main/res/layout/item_sprite_feature.xml
@@ -12,8 +12,9 @@
             android:gravity="center"
             tools:text="01"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/sp_18"
+            android:textSize="@dimen/sp_24"
             android:padding="@dimen/dp_8"
+            app:fontFamily="@font/metric_medium"
             android:background="@drawable/bg_green_circle"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +29,8 @@
             android:padding="8dp"
             android:singleLine="true"
             android:textColor="@android:color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/sp_24"
+            app:fontFamily="@font/metric_medium"
             app:layout_constraintBottom_toBottomOf="@+id/featureIdTxt"
             app:layout_constraintStart_toEndOf="@id/featureIdTxt"
             app:layout_constraintTop_toTopOf="@+id/featureIdTxt"
