--- a/app/src/main/res/drawable/bg_round_green_10dp.xml
+++ b/app/src/main/res/drawable/bg_round_green_10dp.xml
@@ -2,6 +2,6 @@
 <!-- rounded_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="8dp" /> <!-- Adjust the radius as needed -->
-    <solid android:color="@color/green" /> <!-- Set your desired background color -->
+    <corners android:radius="10dp" />
+    <solid android:color="@color/green" />
 </shape>
