--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
             tools:context=".MainActivity">
 
 
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/directoryImage"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
@@ -29,8 +29,9 @@
                 android:layout_height="wrap_content"
                 android:scrollbars="none"
                 app:spanCount="2"
-                android:layout_marginHorizontal="@dimen/dp_20"
+                android:layout_marginHorizontal="@dimen/dp_37"
                 android:orientation="vertical"
+                tools:listitem="@layout/item_sprite_feature"
                 android:fadeScrollbars="false"
                 app:layout_constraintVertical_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -44,26 +45,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/continue_text"
-                android:textSize="16sp"
-                android:paddingStart="@dimen/dp_20"
-                android:paddingEnd="@dimen/dp_20"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:drawablePadding="10dp"
-                android:background="@drawable/bg_round_green_12dp"
+                android:textSize="@dimen/sp_25"
+                android:paddingStart="@dimen/dp_30"
+                android:paddingEnd="@dimen/dp_30"
+                android:paddingVertical="20dp"
+                android:drawablePadding="33dp"
+                android:background="@drawable/bg_round_green_10dp"
                 android:textColor="@android:color/white"
                 android:gravity="center_vertical"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:clickable="true"
-                app:drawableEndCompat="@drawable/baseline_arrow_forward_24_white"
+                app:fontFamily="@font/metric_medium"
+                app:drawableEndCompat="@drawable/btn_arrow"
                 android:focusable="true"
                 app:layout_constraintTop_toBottomOf="@id/spriteFeatureRc"
                 app:layout_constraintBaseline_toBottomOf="parent"
                 android:layout_marginBottom="@dimen/dp_20"
                 android:layout_marginTop="@dimen/dp_15"
                 />
-            <ImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/img_sprite"
                 android:layout_width="125dp"
                 android:layout_height="184dp"
