--- a/app/src/main/res/layout/activity_strike_pose.xml
+++ b/app/src/main/res/layout/activity_strike_pose.xml
@@ -1,11 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".ui.StrikePoseActivity">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/icToolLayout"
+            android:layout_width="match_parent"
+            android:background="@color/white"
+            android:layout_height="50dp"
+            tools:ignore="MissingConstraints">
+
+            <ImageView
+                android:layout_marginStart="@dimen/dp_16"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:src="@drawable/iv_back"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:text="@string/strike_a_pose"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_large"
+                android:fontFamily="@font/metric_medium"
+                android:layout_height="match_parent"/>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="100dp"
+            android:layout_marginVertical="60dp"
+            android:background="#98BECB"
+            app:layout_constraintBottom_toTopOf="@+id/img_sprite"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/icToolLayout">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="25dp"
+                android:background="@drawable/group_4173">
+
+                <androidx.camera.view.PreviewView
+
+                    android:id="@+id/viewFinderPreview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/btnTakePicture"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_round_green_10dp"
+            android:clickable="true"
+            android:focusable="true"
+
+
+
+            android:text="@string/take_picture"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_28"
+            app:fontFamily="@font/metric_medium"
+
+
+            app:layout_constraintBottom_toBottomOf="@+id/btnSwitchCamera"
+            app:layout_constraintEnd_toStartOf="@+id/btnSwitchCamera"
+            app:layout_constraintTop_toTopOf="@+id/btnSwitchCamera" />
+-->
+
+<!--
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/btnSwitchCamera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_rounded_stroke_button"
+            android:clickable="true"
+            android:focusable="true"
+            android:paddingVertical="20dp"
+            android:paddingStart="@dimen/dp_30"
+            android:paddingEnd="@dimen/dp_30"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_28"
+            app:drawableEndCompat="@drawable/ic_green_camera_icon"
+            app:fontFamily="@font/metric_medium"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/img_sprite"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
+-->
+<!--
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/img_sprite"
+            android:layout_width="125dp"
+            android:layout_height="174dp"
+            android:background="@drawable/sprite_bottle"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintStart_toEndOf="@id/continueButton"
+            />
+-->
+
+
+        <ImageView
+            android:id="@+id/btnSwitchCamera"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_button_home"
+            android:fontFamily="@font/metric_medium"
+            android:paddingHorizontal="@dimen/dp_10"
+            android:paddingVertical="@dimen/dp_15"
+            android:src="@drawable/ic_green_camera_icon"
+            android:text="Submit"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_medium"
+
+            app:drawableEndCompat="@drawable/ic_green_camera_icon"
+            app:layout_constraintBottom_toBottomOf="@+id/btnTakePicture"
+            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
+            app:layout_constraintStart_toEndOf="@+id/btnTakePicture"
+            app:layout_constraintTop_toTopOf="@+id/btnTakePicture" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnTakePicture"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_button"
+            android:fontFamily="@font/metric_medium"
+            android:paddingHorizontal="@dimen/dp_30"
+            android:paddingVertical="@dimen/dp_20"
+            android:text="Take Picture"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_medium"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
+
+        <ImageView
+            android:id="@+id/img_sprite"
+            android:layout_width="95dp"
+            android:layout_height="124dp"
+            android:background="@drawable/sprite_bottle"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
