--- a/app/src/main/res/layout/acivity_select_scene.xml
+++ b/app/src/main/res/layout/acivity_select_scene.xml
@@ -34,11 +34,11 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
-            android:paddingHorizontal="100dp"
+            android:paddingHorizontal="@dimen/marignhori_selectscene"
             android:layout_height="wrap_content"
             android:src="@drawable/sprite_three_bootle_image"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
