--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,15 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/directoryImage"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:background="@drawable/sprite_logo"
+
+                android:layout_width="@dimen/marignlogomain"
+                android:layout_height="@dimen/marignlogomain"
+                android:src="@drawable/sprite_logo"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintVertical_bias="0"
-                android:layout_marginTop="@dimen/dp_30"
+                android:layout_marginTop="@dimen/margintopmainscene"
                 />
             <!--        app:layout_constraintDimensionRatio="w,1.21:1"-->
 
@@ -32,6 +33,7 @@
                 android:layout_marginTop="@dimen/dp_25"
                 android:fadeScrollbars="false"
                 android:orientation="vertical"
+                android:layout_marginBottom="@dimen/dp_30"
 
                 android:scrollbars="none"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -46,7 +48,7 @@
                 android:id="@+id/continueButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_15"
+                android:layout_marginTop="30dp"
                 android:background="@drawable/bg_round_green_10dp"
                 android:clickable="true"
                 android:drawablePadding="33dp"
@@ -70,8 +72,10 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/img_sprite"
                 android:layout_width="125dp"
-                android:layout_height="174dp"
-                android:background="@drawable/sprite_bottle"
+                android:adjustViewBounds="true"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="25dp"
+                android:src="@drawable/sprite_bottle"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1"
