--- a/app/src/main/res/layout/activity_preview_frame.xml
+++ b/app/src/main/res/layout/activity_preview_frame.xml
@@ -9,39 +9,9 @@
         android:background="@color/white"
         tools:ignore="MissingDefaultResource">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_marginStart="@dimen/dp_16"
-                android:src="@drawable/iv_back"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tvTitle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/metric_medium"
-                android:gravity="center"
-                android:text="Preview Frame"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_medium"
-                tools:layout_editor_absoluteX="40dp"
-                tools:layout_editor_absoluteY="0dp" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
+        <include
+            android:id="@+id/layout"
+            layout="@layout/toolbar_layout" />
 
         <ImageView
             android:id="@+id/recyScene"
@@ -50,10 +20,11 @@
             android:layout_margin="40dp"
             android:layout_marginHorizontal="10dp"
             android:layout_marginBottom="20dp"
+            android:paddingHorizontal="60dp"
             android:elevation="1dp"
             android:src="@drawable/preview"
             app:layout_constraintBottom_toTopOf="@+id/img_sprite"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintTop_toBottomOf="@+id/layout"
             app:layout_constraintVertical_bias="1.0"
             tools:layout_editor_absoluteX="73dp" />
 
@@ -61,7 +32,8 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnConfirm"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_marginRight="70dp"
+            android:layout_height="70dp"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="20dp"
             android:background="@drawable/bg_button"
@@ -81,7 +53,8 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnRetake"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_marginLeft="70dp"
+            android:layout_height="70dp"
             android:background="@drawable/bg_button_home"
             android:fontFamily="@font/metric_medium"
             android:paddingHorizontal="@dimen/dp_30"
