--- a/app/src/main/res/layout/activity_select_gender.xml
+++ b/app/src/main/res/layout/activity_select_gender.xml
@@ -17,7 +17,7 @@
             android:textColor="@android:color/black"
             android:textSize="36sp"
             app:fontFamily="@font/metric_medium"
-            android:layout_marginTop="-60dp"
+            android:layout_marginTop="@dimen/marighTopMinus"
             app:layout_constraintBaseline_toBottomOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,8 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:paddingHorizontal="70dp"
-            android:scaleType="fitXY"
+            android:paddingHorizontal="@dimen/paddinghorizontalspritnbottom"
             android:src="@drawable/sprite_three_bootle_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
