--- a/app/src/main/res/layout/activity_strike_pose.xml
+++ b/app/src/main/res/layout/activity_strike_pose.xml
@@ -8,33 +8,9 @@
         android:background="@color/white"
         tools:context=".ui.StrikePoseActivity">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/icToolLayout"
-            android:layout_width="match_parent"
-            android:background="@color/white"
-            android:layout_height="50dp"
-            tools:ignore="MissingConstraints">
-
-            <ImageView
-                android:layout_marginStart="@dimen/dp_16"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:src="@drawable/iv_back"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:text="@string/strike_a_pose"
-                android:gravity="center"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_large"
-                android:fontFamily="@font/metric_medium"
-                android:layout_height="match_parent"/>
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <include
+            android:id="@+id/layout"
+            layout="@layout/toolbar_layout" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout2"
@@ -42,16 +18,15 @@
             android:layout_height="0dp"
             android:layout_marginHorizontal="100dp"
             android:layout_marginVertical="60dp"
-            android:background="#98BECB"
+            android:background="#fff"
             app:layout_constraintBottom_toTopOf="@+id/img_sprite"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/icToolLayout">
+            app:layout_constraintTop_toBottomOf="@id/layout">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="25dp"
                 android:background="@drawable/group_4173">
 
                 <androidx.camera.view.PreviewView
@@ -119,49 +94,60 @@
             />
 -->
 
-
-        <ImageView
-            android:id="@+id/btnSwitchCamera"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_button_home"
-            android:fontFamily="@font/metric_medium"
-            android:paddingHorizontal="@dimen/dp_10"
-            android:paddingVertical="@dimen/dp_15"
-            android:src="@drawable/ic_green_camera_icon"
-            android:text="Submit"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_size_medium"
-
-            app:drawableEndCompat="@drawable/ic_green_camera_icon"
-            app:layout_constraintBottom_toBottomOf="@+id/btnTakePicture"
-            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
-            app:layout_constraintStart_toEndOf="@+id/btnTakePicture"
-            app:layout_constraintTop_toTopOf="@+id/btnTakePicture" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnTakePicture"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_button"
-            android:fontFamily="@font/metric_medium"
-            android:paddingHorizontal="@dimen/dp_30"
-            android:paddingVertical="@dimen/dp_20"
-            android:text="Take Picture"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_size_medium"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
+            android:id="@+id/llStrike"
+            android:layout_height="wrap_content">
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnTakePicture"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_button"
+                android:fontFamily="@font/metric_medium"
+                android:paddingHorizontal="@dimen/dp_30"
+                android:paddingVertical="@dimen/dp_20"
+                android:text="Take Picture"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_medium"
+                />
+            <ImageView
+                android:id="@+id/btnSwitchCamera"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+               android:layout_marginLeft="@dimen/dp_30"
+                android:background="@drawable/bg_button_home"
+                android:fontFamily="@font/metric_medium"
+                android:paddingHorizontal="@dimen/dp_10"
+                android:paddingVertical="@dimen/dp_15"
+                android:src="@drawable/ic_green_camera_icon"
+                android:text="Submit"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_medium"
+                app:drawableEndCompat="@drawable/ic_green_camera_icon"
+                app:layout_constraintBottom_toBottomOf="@+id/btnTakePicture"
+                app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
+                app:layout_constraintStart_toEndOf="@+id/btnTakePicture"
+                app:layout_constraintTop_toTopOf="@+id/btnTakePicture" />
+
+
+
+        </LinearLayout>
+
 
         <ImageView
             android:id="@+id/img_sprite"
-            android:layout_width="95dp"
+            android:layout_width="wrap_content"
             android:layout_height="124dp"
-            android:background="@drawable/sprite_bottle"
-
+            android:layout_marginRight="@dimen/dp_10"
+            android:adjustViewBounds="true"
+            android:src="@drawable/sprite_bottle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1" />
