--- a/app/src/main/res/layout/item_select_scene.xml
+++ b/app/src/main/res/layout/item_select_scene.xml
@@ -24,15 +24,48 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/ivImage"
-                android:scaleType="fitXY"
-                android:src="@drawable/scene_1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/ivImage"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/scene_1"
+                    />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/black"
+                    android:alpha="0.2"
+                    android:visibility="gone"
+                    android:id="@+id/ivImageClick"
+                    android:scaleType="centerCrop"
+
+                    />
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/checked"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerInParent="true"
+                    android:layout_centerVertical="true"
+                    android:visibility="gone"
+                    android:id="@+id/ivTick"
+                    android:scaleType="centerCrop"
+
+                    />
+            </RelativeLayout>
+
+
+
+
         </androidx.cardview.widget.CardView>
 
 
