--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -9,27 +10,35 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:background="@color/white"
-        android:layout_height="50dp">
+        android:padding="30dp"
+        android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_marginStart="@dimen/dp_16"
-            android:layout_width="wrap_content"
+            android:id="@+id/ivBack"
+            android:layout_width="50dp"
             android:layout_height="50dp"
+            android:padding="@dimen/dp_10"
+
             android:src="@drawable/iv_back"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toStartOf="@id/tvTitle"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="packed" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:text="Select a Scene"
             android:id="@+id/tvTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/metric_medium"
             android:gravity="center"
+            android:text="Select a Scene"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size_medium"
-            android:fontFamily="@font/metric_medium"
-            android:layout_height="match_parent" />
-
+            app:layout_constraintStart_toEndOf="@id/ivBack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
