--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#359444</color>
     <color name="text_green">#359444</color>
+    <color name="transparent">#00000000</color>
+    <color name="colorPrimary">#402E87</color>
+    <color name="colorPrimaryDark">#3A2688</color>
 </resources>
