--- a/app/src/main/res/layout/item_sprite_feature.xml
+++ b/app/src/main/res/layout/item_sprite_feature.xml
@@ -11,7 +11,7 @@
             android:layout_height="48dp"
             android:gravity="center"
             tools:text="01"
-            android:textColor="@android:color/white"
+            android:textColor="#00AA50"
             android:textSize="@dimen/sp_24"
             android:padding="@dimen/dp_8"
             app:fontFamily="@font/metric_regular"
@@ -28,7 +28,7 @@
             android:includeFontPadding="false"
             android:padding="8dp"
             android:singleLine="true"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textSize="@dimen/sp_24"
             app:fontFamily="@font/metric_medium"
             app:layout_constraintBottom_toBottomOf="@+id/featureIdTxt"
