--- a/app/src/main/res/drawable/iv_back.xml
+++ b/app/src/main/res/drawable/iv_back.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="19.47">
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="#FFF"
       android:pathData="M10.732,0.396a1.335,1.335 0,0 1,0 1.9l-6.14,6.14L22.665,8.436a1.335,1.335 0,0 1,0 2.67L4.619,11.106l6.113,6.1a1.331,1.331 0,0 1,-1.882 1.882L0.361,10.596a1.175,1.175 0,0 1,0 -1.7L8.84,0.396a1.335,1.335 0,0 1,1.9 0Z"/>
 </vector>
