--- a/app/src/main/res/layout/acivity_select_scene.xml
+++ b/app/src/main/res/layout/acivity_select_scene.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@drawable/bg_main_without"
         tools:ignore="MissingDefaultResource">
 
         <include
@@ -34,6 +34,7 @@
             android:layout_width="wrap_content"
             android:paddingHorizontal="@dimen/marignhori_selectscene"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             android:src="@drawable/sprite_three_bootle_image"
             android:adjustViewBounds="true"
 
