--- a/app/src/main/res/layout/acivity_send_whatsapp.xml
+++ b/app/src/main/res/layout/acivity_send_whatsapp.xml
@@ -19,7 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/Mainparent"
-                android:background="@color/white"
+                android:background="@drawable/bg_main_without"
                 tools:ignore="MissingDefaultResource">
 
                 <include
@@ -31,8 +31,10 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:id="@+id/edit"
+                    android:background="@drawable/border_round"
                     android:layout_marginHorizontal="40dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="30dp"
+                    android:padding="@dimen/dp_20"
                     app:layout_constraintBottom_toTopOf="@+id/img_sprite"
                     app:layout_constraintTop_toBottomOf="@+id/recyScene"
                     android:layout_height="wrap_content">
@@ -140,7 +142,7 @@
                         android:textAllCaps="false"
                         android:textSize="@dimen/text_size_medium"
                         android:layout_marginEnd="@dimen/dp_20"
-                        android:textColor="#359444"
+                        android:textColor="#333333"
                         app:layout_constraintBottom_toBottomOf="@+id/btnSubmit"
                         app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
                         app:layout_constraintTop_toTopOf="@+id/btnSubmit" />
@@ -150,7 +152,7 @@
                         android:layout_height="70dp"
                         android:layout_weight="1"
                         android:layout_marginEnd="10dp"
-                        android:background="@drawable/bg_button"
+                        android:background="@drawable/bg_round_green_10dp"
                         android:fontFamily="@font/metric_medium"
                         android:paddingHorizontal="@dimen/dp_10"
                         android:paddingVertical="@dimen/dp_10"
@@ -187,6 +189,7 @@
                     android:id="@+id/img_sprite"
                     android:layout_width="wrap_content"
                     android:layout_height="124dp"
+                    android:visibility="invisible"
                     android:adjustViewBounds="true"
                     android:src="@drawable/sprite_bottle"
                     android:layout_marginRight="@dimen/dp_30"
