--- a/app/src/main/res/layout/acivity_whatsapp.xml
+++ b/app/src/main/res/layout/acivity_whatsapp.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+  android:background="@drawable/bg_main_without"
         tools:ignore="MissingDefaultResource">
 
         <include
@@ -30,16 +30,29 @@
             app:layout_constraintBottom_toTopOf="@+id/imageView2"
             app:layout_constraintTop_toBottomOf="@+id/layout" />
 
-        <ImageView
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
             android:id="@+id/imageView2"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginHorizontal="10dp"
-            android:padding="@dimen/dp_10"
-            android:background="@drawable/barcode"
             app:layout_constraintBottom_toTopOf="@+id/img_sprite"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:padding="@dimen/dp_16"
+            android:background="@drawable/border_round"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imageView21"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_marginHorizontal="10dp"
+                android:background="@drawable/barcode"
+                android:padding="@dimen/dp_10"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,7 +80,7 @@
                 android:textAllCaps="false"
                 android:textSize="@dimen/text_size_medium"
                 android:layout_marginEnd="@dimen/dp_20"
-                android:textColor="#359444"
+                android:textColor="#333333"
                 app:layout_constraintBottom_toBottomOf="@+id/btnWhatsapp"
                 app:layout_constraintEnd_toStartOf="@+id/btnWhatsapp"
                 app:layout_constraintTop_toTopOf="@+id/btnWhatsapp" />
@@ -78,7 +91,7 @@
                 android:layout_height="70dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginLeft="@dimen/dp_20"
-                android:background="@drawable/bg_button"
+                android:background="@drawable/bg_round_green_10dp"
                 android:fontFamily="@font/metric_medium"
                 android:paddingHorizontal="@dimen/dp_10"
                 android:paddingVertical="@dimen/dp_10"
@@ -95,7 +108,9 @@
             android:layout_width="wrap_content"
             android:layout_height="124dp"
             android:adjustViewBounds="true"
+            android:visibility="invisible"
             android:src="@drawable/sprite_bottle"
+
             android:layout_marginRight="@dimen/dp_20"
 
             app:layout_constraintBottom_toBottomOf="parent"
