--- a/app/src/main/res/layout/activity_preview_frame.xml
+++ b/app/src/main/res/layout/activity_preview_frame.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+       android:background="@drawable/bg_main_without"
         tools:ignore="MissingDefaultResource">
 
         <include
@@ -36,7 +36,7 @@
             android:layout_height="70dp"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="20dp"
-            android:background="@drawable/bg_button"
+            android:background="@drawable/bg_round_green_10dp"
             android:fontFamily="@font/metric_medium"
             android:paddingHorizontal="@dimen/dp_10"
             android:paddingVertical="@dimen/dp_10"
@@ -76,7 +76,7 @@
             android:layout_width="95dp"
             android:layout_height="124dp"
             android:background="@drawable/sprite_bottle"
-
+android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1" />
