--- a/app/src/main/res/layout/activity_select_gender.xml
+++ b/app/src/main/res/layout/activity_select_gender.xml
@@ -6,6 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/bg_main"
         tools:context=".ui.SelectGenderActivity">
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -17,7 +18,7 @@
             android:textColor="@android:color/black"
             android:textSize="36sp"
             app:fontFamily="@font/metric_medium"
-            android:layout_marginTop="@dimen/marighTopMinus"
+            android:layout_marginTop="-250dp"
             app:layout_constraintBaseline_toBottomOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -70,6 +71,7 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:paddingHorizontal="@dimen/paddinghorizontalspritnbottom"
