--- a/app/src/main/res/layout/activity_strike_pose.xml
+++ b/app/src/main/res/layout/activity_strike_pose.xml
@@ -5,7 +5,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@drawable/bg_main_without"
         tools:context=".ui.StrikePoseActivity">
 
         <include
@@ -107,7 +107,7 @@
                 android:id="@+id/btnTakePicture"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_button"
+                android:background="@drawable/bg_round_green_10dp"
                 android:fontFamily="@font/metric_medium"
                 android:paddingHorizontal="@dimen/dp_30"
                 android:paddingVertical="@dimen/dp_20"
@@ -121,7 +121,7 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
-                android:background="@drawable/bg_button_home"
+                android:background="@drawable/border_round"
                 android:fontFamily="@font/metric_medium"
                 android:paddingHorizontal="@dimen/dp_10"
                 android:paddingVertical="@dimen/dp_15"
@@ -145,6 +145,7 @@
             android:id="@+id/img_sprite"
             android:layout_width="wrap_content"
             android:layout_height="124dp"
+            android:visibility="invisible"
             android:layout_marginRight="@dimen/dp_10"
             android:adjustViewBounds="true"
             android:src="@drawable/sprite_bottle"
