--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:background="@color/white"
+        android:background="#00AA50"
         android:padding="30dp"
         android:layout_height="wrap_content">
 
@@ -33,7 +33,7 @@
             android:fontFamily="@font/metric_medium"
             android:gravity="center"
             android:text="Select a Scene"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="@dimen/text_size_medium"
             app:layout_constraintStart_toEndOf="@id/ivBack"
             app:layout_constraintEnd_toEndOf="parent"
