--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#333333</color>
+    <color name="greendark">#4D4D4D</color>
     <color name="text_green">#333333</color>
     <color name="transparent">#00000000</color>
     <color name="colorPrimary">#402E87</color>
